añadido estado del pedido actualizado